# VFXLab

./: .gitattributes  CMakeLists.txt  README.md  setup.ps1
Samples/Shadertoy/: ExpansiveReactionDiffusion-BufferA.frag  ExpansiveReactionDiffusion-BufferC.frag  ExpansiveReactionDiffusion-BufferD.frag  ExpansiveReactionDiffusion-Image.frag  ExpansiveReactionDiffusion.json  SimpleGradient.json  TracedTunnel.frag  TracedTunnel.json
Source/: Effect.cpp  Effect.h  EffectFactory.cpp  EffectFactory.h  JsonDeserialize.cpp  JsonDeserialize.h  Logging.cpp  Logging.h  VFXLab.cpp  VFXLab.h  main.cpp
Source/Shaders/: Shadertoy.frag
Source/Shadertoy/: Shadertoy.cpp  Shadertoy.h  ShadertoyLoad.cpp
